<resources>
    <string name="app_name">Fitness App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_email">Username/Email</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Email">Email</string>
    <string name="already_registered">Already Registered?</string>
    <string name="title_activity_main">Fitness App</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="facebook_share">Share with Facebook</string>
    <string name="whatsapp_share">Share via WhatsApp</string>
    <string name="twitter_share">Share via Twitter</string>
    <string name="action_settings">User settings</string>
    <string name="change_photo">Change photo</string>
    <string name="save_btn">Save</string>
    <string name="back_home_btn">Back</string>
    <string name="year_old">years old</string>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
