<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4C4C0"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.fitnessapp.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/gym_logo"/>

    <EditText
        android:id="@+id/edittext_username_email"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="#DDE2E1"
        android:drawableLeft="@drawable/username"
        android:hint="@string/Email"
        android:paddingLeft="2dp" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="#DDE2E1"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"
        android:paddingLeft="2dp" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="#DDE2E1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edittext_age"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:text="@string/gender"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:dropDownWidth="wrap_content"
            android:entries="@array/genders" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="#DDE2E1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edittext_weight"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kg"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_height"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textview3"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cm"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="#DDE2E1"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="#DDE2E1"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/button_register"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFDDE2E1"
        android:text="@string/register"
        android:onClick="registerButtonOnClick"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#000000"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/login"
            android:onClick="loginButtonOnClick"
            android:clickable="true"/>

    </LinearLayout>

</LinearLayout>