<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fitnessapp.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#B4C4C0">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/gym_logo"/>

    <EditText
        android:id="@+id/edittext_username_email"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginTop="60dp"
        android:paddingLeft="2dp"
        android:background="#DDE2E1"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username_email"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:background="#DDE2E1"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"/>
 
    <Button
        android:id="@+id/button_login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="#FFDDE2E1"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        />


    <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="10dp">

        <TextView
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:textColor="#000000"
             android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/register"/>

        </LinearLayout>
</LinearLayout>