<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4C4C0"
    tools:context=".UserDataActivity">

    <ImageView
        android:id="@+id/user_image_view"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_def_icon" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="#DDE2E1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_image_view"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:paddingLeft="4dp"
            android:text="@string/username"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/username" />

        <TextView
            android:id="@+id/textview_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="4dp"
            android:text="@string/Email"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Email" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <!--<Button
                android:id="@+id/change_photo_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_photo" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="#DDE2E1">

                <EditText
                    android:id="@+id/edittext_user_age"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/age"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="2dp"
                    android:text="@string/year_old"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#DDE2E1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edittext_weight"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/weight"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textview2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kg"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittext_height"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/height"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textview3"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cm"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="2dp"
            android:background="#DDE2E1"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:onClick="saveButtonOnClick"
        android:text="@string/save_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/back_home_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/back_home_btn"
        app:layout_constraintStart_toEndOf="@+id/save_btn"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:onClick="backButtonOnClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>